update mesh location

--- a/mofem/tools/CMakeLists.txt
+++ b/mofem/tools/CMakeLists.txt
@@ -274,7 +274,7 @@ endif(ADOL-C_LIBRARY)
 add_test(read_vtk
   ${MPI_RUN} ${MPI_RUN_FLAGS} --oversubscribe -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/read_vtk
-  -file_name ${CMAKE_CURRENT_BINARY_DIR}/Box_layer_heter.vtk
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/meshes/box_layer_heter.vtk
   -log_no_color
   -atom_test 1
 )
