--- a/mofem/tutorials/adv-2/CMakeLists.txt
+++ b/mofem/tutorials/adv-2/CMakeLists.txt
@@ -51,8 +51,12 @@ set_target_properties(
 ##### TESTS #####
 #################
 
+### atom_test = 1 : 3D isotropic thermal expansion != 2D plane strain
+### atom_test = 2 : 3D no thermal expansion in Z = 2D plane strain
+### atom_test = 2 : 2D plane stress
+
 add_test(
-  convection_and_radiation_3d_iso
+  convection_and_radiation_3d_exp_iso
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
   thermo_elastic_3d
   -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_3d_exp_iso_4p.h5m
@@ -66,4 +70,56 @@ add_test(
   -ref_temp 293
   -field_eval_coords 0.75,0.75,0.25
   -atom_test 1
+)
+
+add_test(
+  convection_and_radiation_3d_exp_no_z
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_3d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_3d_exp_no_z_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.75,0.75,0.25
+  -atom_test 2
+)
+
+add_test(
+  convection_and_radiation_2d_plane_strain
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_2d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_2d_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.75,0.75
+  -plane_strain
+  -atom_test 2
+)
+
+add_test(
+  convection_and_radiation_2d_plane_stress
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_2d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_2d_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.75,0.75
+  -atom_test 3
 )
