--- a/mofem/tutorials/adv-2/CMakeLists.txt
+++ b/mofem/tutorials/adv-2/CMakeLists.txt
@@ -35,6 +35,7 @@ tutorials_copy_and_install("*.png" "${permissions_execute}")
 tutorials_copy_and_install("*.md" "${permissions_execute}")
 tutorials_copy_and_install("*.cfg" "${permissions_execute}")
 tutorials_copy_and_install("*.jou" "${permissions_execute}")
+tutorials_copy_and_install("*.txt" "${permissions_execute}")
 tutorials_copy_and_install("meshes/*" "${permissions_execute}")
 
 tutorials_build_and_install(
@@ -51,11 +52,16 @@ set_target_properties(
 ##### TESTS #####
 #################
 
+### atom_test = 1 : convection & raditiation 3D isotropic thermal expansion != 2D plane strain
+### atom_test = 2 : convection & raditiation 3D no thermal expansion in Z = 2D plane strain
+### atom_test = 3 : convection & raditiation 2D plane stress
+### atom_test = 4 : temperature BC 2D plane stress
+
 add_test(
-  convection_and_radiation_3d
+  convection_and_radiation_3d_exp_iso
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
   thermo_elastic_3d
-  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_test.h5m
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_3d_exp_iso_4p.h5m
   -order 2
   -pc_type lu
   -pc_factor_mat_solver_type mumps  
@@ -64,6 +70,103 @@ add_test(
   -ts_dt 1
   -init_temp 293 
   -ref_temp 293
-  -field_eval_coords 0.5,0.5,0.25
+  -field_eval_coords 0.75,0.75,0.25
   -atom_test 1
+)
+
+add_test(
+  convection_and_radiation_3d_exp_no_z
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_3d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_3d_exp_no_z_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.75,0.75,0.25
+  -atom_test 2
+)
+
+add_test(
+  convection_and_radiation_2d_plane_strain
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_2d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_2d_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.75,0.75
+  -plane_strain
+  -atom_test 2
+)
+
+add_test(
+  convection_and_radiation_2d_plane_stress
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_2d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_2d_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.75,0.75
+  -atom_test 3
+)
+
+add_test(
+  convection_and_radiation_2d_plane_stress_no_mat_blocks
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_2d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/conv_rad_2d_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -young_modulus 200e3 
+  -poisson_ratio 0.3 
+  -coeff_expansion 1e-5 
+  -capacity 3000 
+  -conductivity 500 
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.75,0.75
+  -atom_test 3
+)
+
+add_test(
+  temp_bc_2d
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  thermo_elastic_2d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/temp_bc_2d_4p.h5m
+  -order 2
+  -pc_type lu
+  -pc_factor_mat_solver_type mumps  
+  -ts_type beuler
+  -ts_max_time 10 
+  -ts_dt 1
+  -young_modulus 200e3 
+  -poisson_ratio 0.3 
+  -coeff_expansion 1e-5 
+  -capacity 3000 
+  -conductivity 500 
+  -init_temp 293 
+  -ref_temp 293
+  -field_eval_coords 0.5,0.5
+  -atom_test 4
+  -time_scalar_file time_scale.txt
 )
