--- a/mofem/cmake/CMakeLists.txt
+++ b/mofem/cmake/CMakeLists.txt
@@ -3,6 +3,7 @@ install(
     FindADOL-C.cmake
     FindMed.cmake
     FindTetGen.cmake
+    FindMFront.cmake
     RunAndComp.cmake
     GetGitRevisionSimple.cmake
     DESTINATION 
