--- a/mofem/CMakeLists.txt
+++ b/mofem/CMakeLists.txt
@@ -291,7 +291,9 @@ resolve_libraries(SYSTEM_PROJECT_LIBS "
 set(OPTIONAL_PROJECT_LIBS
   ${TETGEN_LIBRARY}
   ${MED_LIBRARY}
-  ${ADOL-C_LIBRARY})
+  ${ADOL-C_LIBRARY}
+  ${MGIS_LIBRARY}
+)
 set(PROJECT_LIBS 
   ${OPTIONAL_PROJECT_LIBS} ${SYSTEM_PROJECT_LIBS} ${PETSCVAR_BLASLAPACK_LIB})
 message(STATUS ${PROJECT_LIBS})
