--- a/mofem/tools/CMakeLists.txt
+++ b/mofem/tools/CMakeLists.txt
@@ -22,6 +22,7 @@ set(OPTIONAL_PROJECT_LIBS
   ${TETGEN_LIBRARY}
   ${ADOL-C_LIBRARY}
   ${MED_LIBRARY}
+  ${MGIS_LIBRARY}
 )
 
 set(MoFEM_PROJECT_LIBS 
