--- a/mofem/tutorials/CMakeLists.txt
+++ b/mofem/tutorials/CMakeLists.txt
@@ -29,6 +29,7 @@ set(OPTIONAL_PROJECT_LIBS
   ${TETGEN_LIBRARY}
   ${ADOL-C_LIBRARY}
   ${MED_LIBRARY}
+  ${MGIS_LIBRARY}
 )
 set(MoFEM_PROJECT_LIBS 
   ${OPTIONAL_PROJECT_LIBS} ${MoFEM_SYSTEM_PROJECT_LIBS} ${PROJECT_LIBS})
