fixed mistake in gravity

--- a/mofem/tutorials/adv-5/CMakeLists.txt
+++ b/mofem/tutorials/adv-5/CMakeLists.txt
@@ -59,6 +59,8 @@ add_test(
   -conductivity 0.00012
   -biot_constant 1
   -storage 1
+  -fluid_density 1
+  -mat_density 1
   -plane strain
   -order 2 
   -field_eval_coords 0 0 
