--- a/Dockerfile-spack-env
+++ b/Dockerfile-spack-env
@@ -64,14 +64,17 @@ ENV TARGET=x86_64
 #ENV TARGET=aarch64
 
 # clone spack
-RUN mkdir -p $SPACK_ROOT_DIR && \
-    curl -s -L https://bitbucket.org/mofem/mofem-spack/get/adeab2cb6d2794148136f639b8825e1fb94d22ce.tar.gz \
-    | tar xzC $SPACK_ROOT_DIR --strip 1 && \
-    . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
-    echo ". $SPACK_ROOT_DIR/share/spack/setup-env.sh" >> ~/.bashrc && \
+RUN mkdir -p $SPACK_ROOT_DIR
+    # curl -s -L https://bitbucket.org/mofem/mofem-spack/get/adeab2cb6d2794148136f639b8825e1fb94d22ce.tar.gz \
+    # | tar xzC $SPACK_ROOT_DIR --strip 1 && \
+RUN git clone -b master  https://bitbucket.org/mofem/mofem-spack.git  $SPACK_ROOT_DIR
+
+RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
+    echo ". $SPACK_ROOT_DIR/share/spack/setup-env.sh" >> /etc/bash.bashrc && \
     spack external find && \
     spack install --only dependencies mofem-cephas@lukasz+mgis \
-    target=$TARGET build_type=Release ^petsc+X ^boost+python+numpy
+    target=$TARGET build_type=Release ^petsc+X ^boost+python+numpy && \
+    spack install py-scipy
 
 # image run hook: the -l will make sure /etc/profile environments are loaded
 CMD        /bin/bash -l
