--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,6 +13,7 @@ pipelines:
           - linux
         size: 8x
         artifacts:
+          - logs.txt
         script:
           - set -o pipefail
           - SRC_DIR=$PWD
@@ -20,5 +21,5 @@ pipelines:
           - spack dev-build --before build --source-path $SRC_DIR --test root mofem-cephas@lukasz~copy_user_modules target=x86_64 build_type=Debug ^petsc+X ^boost+python+numpy 2>&1 | tee $SRC_DIR/logs.txt
           - cd core* && sed -i "s@SITE:STRING=.*@SITE:STRING=Cactus\nBUILDNAME:UNINITIALIZED=$BITBUCKET_BRANCH@g" CMakeCache.txt && make rebuild_cache
           - spack load boost
-          - ctest --output-on-failure -D Experimental 
+          - ctest --output-on-failure -D Experimental 2>&1 | tee -a $SRC_DIR/logs.txt
           - make
