Added  HookOps to Vec0 and Adv1

--- a/mofem/tutorials/adv-1/CMakeLists.txt
+++ b/mofem/tutorials/adv-1/CMakeLists.txt
@@ -171,11 +171,32 @@ add_test(
   -sdf_file ./sdf_files/sdf_hertz_2d_plane.py
   -young_modulus 1e3
   -poisson_ratio 0.4
+  -is_large_strain 1
   -atom_test 1
 )
 
 add_test(
-  hertz_3d
+  hertz_2d_plane_stress_schur_hookes ## Tests for HookeOps without is_large_strain
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  contact_2d_schur
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/cyl_2d_4p.h5m
+  -pc_type fieldsplit
+  -mofem_mg_levels 2
+  -order 2 
+  -eps_stab 1e-4
+  -ts_type beuler
+  -ts_max_time 1 
+  -ts_max_steps 10
+  -ts_dt 1
+  -sdf_file ./sdf_files/sdf_hertz_2d_plane.py
+  -young_modulus 1e3
+  -poisson_ratio 0.4
+  -is_large_strain 0
+  -atom_test 1
+)
+
+add_test(
+  hertz_3D
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
   contact_3d
   -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_4p.h5m
@@ -215,10 +236,11 @@ add_test(
 )
 
 add_test(
-  wavy_3d
+  wavy_3D
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
   contact_3d
   -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_3d_4p.h5m
+  -is_large_strain 1
   -base demkowicz
   -pc_type lu
   -ts_type beuler
@@ -231,6 +253,21 @@ add_test(
 
 endif(Boost_NUMPY_LIBRARY_RELEASE)
 
+add_test(
+  wavy_3d_hookes
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  contact_3d
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_3d_4p.h5m
+  -is_large_strain 0
+  -base demkowicz
+  -pc_type lu
+  -ts_type beuler
+  -ts_max_time 1 -ts_dt 1
+  -sdf_file ./sdf_files/sdf_plane_3d.py
+  -young_modulus 1e3
+  -poisson_ratio 0.4
+  -atom_test 7
+)
 # if(IS_MFRONT_MOD)
 #   if(TFEL_DIR)
 #     message("TFEL DIR FOUND")
